Simplify test setup in RewardServiceTests
Refactored RewardServiceTests to cut down on repetitive code and simplify the test setup process. Introduced helper methods like createCustomer and mockTransactions to create test objects and mock repository methods respectively. This enhances the overall readability and maintainability of the test class while avoiding redundancy.